增加了查看已接受已发布任务的界面

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
     "pages/welcome/register/register",
     "pages/welcome/login/login",
     "pages/welcome/welcome",
-    "pages/publish/publish"
+    "pages/publish/publish",
+    "pages/task/accepted/accepted",
+    "pages/task/published/published"
   ],
   "window":{
     "backgroundTextStyle":"light",
