--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
     "pages/publish/publish",
     "pages/task/accepted/accepted",
     "pages/task/published/published",
-    "pages/task/detail/detail"
+    "pages/task/detail_acc/detail",
+    "pages/task/detail_pub/detail"
   ],
   "window":{
     "backgroundTextStyle":"light",
